tests/rosetta/out/Java/canonicalize-cidr.error
javac: exit status 1
/tmp/CanonicalizeCidr.java:31: error: incompatible types: String cannot be converted to Number
            res = res + ((Number)xs.get(i)).doubleValue();
                                       ^
/tmp/CanonicalizeCidr.java:53: error: cannot find symbol
        Digit digits = new Digit(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        ^
  symbol:   class Digit
  location: class CanonicalizeCidr
/tmp/CanonicalizeCidr.java:53: error: cannot find symbol
        Digit digits = new Digit(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                           ^
  symbol:   class Digit
  location: class CanonicalizeCidr
/tmp/CanonicalizeCidr.java:69: error: incompatible types: int cannot be converted to String
            val = (int)(Integer.parseInt((val / 2)));
                                              ^
/tmp/CanonicalizeCidr.java:92: error: incompatible types: String cannot be converted to List<String>
        List<String> dotted = parts.get(0);
                                       ^
/tmp/CanonicalizeCidr.java:95: error: incompatible types: List<String> cannot be converted to String
        for (String p : split(dotted, ".")) {
                              ^
/tmp/CanonicalizeCidr.java:106: error: incompatible types: String cannot be converted to Number
        return join(canonParts, ".") + "/" + ((Number)parts.get(1)).doubleValue();
                                                               ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
7 errors
